wrote readme, made compatible with java 8, remove redundunt dependencies from tests